# Sistem-Kontrol-Terdistribusi

./: README.md
Edge Gateway/: Cargo.toml
Edge Gateway/src/: main.rs
firmware (Copy)/: Cargo.toml
firmware (Copy)/src/: main.rs
