# File: Cargo.toml

[package]
name = "strawberry-edge-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime Asinkron Utama
tokio = { version = "1", features = ["full"] }

# Penanganan Error
anyhow = "1.0"

# Serialisasi dan Deserialisasi JSON (Untuk data dari ESP32)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Klien MQTT Asinkron (Untuk ThingsBoard)
rumqttc = "0.24" # Gunakan versi terbaru yang kompatibel

# Klien InfluxDB Asinkron
influxdb2 = "0.7" # Gunakan versi terbaru yang kompatibel

# Abstraksi Stream dan Future
futures = "0.3"

# Komunikasi Serial Asinkron
tokio-serial = "5.4" # Digunakan untuk membaca data dari port serial ESP32

# Codec untuk memproses baris data (stream) dari serial
tokio-util = { version = "0.7", features = ["codec"] }
