# File: Cargo.toml

[package]
name = "strawberry-storage-control"
version = "0.1.0"
authors = ["cahyooktorisfian@gmail.com"]
edition = "2021"

[dependencies]
# Dependencies utama ESP-IDF dan Rust
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-hal = { version = "0.42.0" }
esp-idf-svc = { version = "0.42.0", features = ["log"] }

# Logging
log = { version = "0.4", features = ["std"] }

# Pustaka untuk komunikasi Modbus RTU
rmodbus = "0.13"

# Pustaka untuk serialisasi data menjadi JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pustaka standar Rust yang digunakan
anyhow = "1.0"
embedded-svc = "0.25"

# Konfigurasi Target Khusus (ESP32-S3)
[build-dependencies]
# Pustaka untuk membangun aplikasi ESP-IDF
esp-idf-build = { version = "0.1.0" }

# Mengatur target ESP32-S3
[features]
default = ["std", "embassy-time-timg0"]
std = ["esp-idf-svc/std"]
experimental = ["esp-idf-svc/experimental"]

# Tambahkan target spesifik untuk ESP32-S3
# Pastikan Anda menggunakan chip yang benar (misalnya, esp32s3)
esp32s3 = ["esp-idf-sys/esp32s3"]
